--- a/nginx/gitlab.conf
+++ b/nginx/gitlab.conf
@@ -1,3 +1,15 @@
+## 
+## 尝试ssh转发失败，
+## 位置 >> /etc/nginx/nginx.conf
+## ... 
+## stream {
+##     server {
+##         listen    public-ssh-port;
+##         proxy_pass inner-ip:22;
+##     }
+## }
+
+## 位置 /etc/nginx/conf.d/gitlab.conf
 upstream gitlab {
   server                    gitlabip:portfail_timeout=0;
 }
@@ -10,7 +22,7 @@ upstream gitlab {
   root                      /dev/null;
  
   sub_filter 'gitlabip:port'  'your-public-ip';
-  sub_filter 'git@gitlabip:'  'git://your-public-ip:ssh-port/';
+  sub_filter 'git@gitlabip:'  'git://your-public-ip:public-ssh-port/';
   sub_filter_once off;
   client_max_body_size      20m; 
   access_log                /var/log/nginx/gitlab_ssl_access.log;
